front end added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,12 +49,17 @@
 
         <!-- Output section -->
         <div class="row">
-            <div class="col-md-12 col-sm-12">
-                <div class="jumbotron" style="margin: -2% 6% 0 6%;background-color: rgba(255, 255, 255, 0.979);">
-                    <h1 class="display-3" style="color: black;">Output</h1>
-                    <hr class="my-4">
-                    <h5><strong style="color: dodgerblue;"><%=msgDigest%></strong></h5>
+            <div class="col-md-8 col-sm-12 offset-md-2">
+                <div class="card" style="margin: -2% 6% 0 6%;background-color: rgba(255, 255, 255, 0.979);"">
+                    <div class="card-body">
+                        <h1 class="display-3" style="color: black;">Output</h1>
+                        <hr class="my-4">
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-text" style="color:  dodgerblue;;"><%=msgDigest%></h5>
+                    </div>
                 </div>
+                
             </div>
         </div>
 
